# fish-diffusion

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  FISHSVC-eng.md  LICENSE  README.en.md  README.md  README.zh.md  boundary_predictor.py  cluster.py  compose.yml  data_utils.py  dataset.py  evaluate.py  flask_api.py  gen_stats.py  genindex.html  index.html  inference.py  inference_svs.py  inference_svs_ds.py  installreq.sh  objects.inv  pl_train.py  prepare_align.py  preprocess.py  preprocess_flist_config.py  preprocess_hubert_f0.py  pretrain.py  pyproject.toml  requirements.txt  resample.py  run.sh  search.html  searchindex.js  synthesize.py  test.ipynb  (+3 more)
.doctrees/: environment.pickle  index.doctree
.doctrees/pages/: config.doctree  faq.doctree  guide.doctree  quality.doctree
.github/workflows/: ci.yml
_sources/: index.md.txt
_sources/pages/: config.md.txt  faq.md.txt  guide.md.txt  quality.md.txt
audio/: __init__.py  stft.py  tools.py
checkpoints/nsf_hifigan/: config.json
config/LJSpeech/: model.yaml  preprocess.yaml  train.yaml
config/ms/: model.yaml  preprocess.yaml  train.yaml
configs/: base.py  denoiser_cn_hubert.py  encodec_decoder.py  hubert_decoder.py  pitch_predictor.py  svc_cn_hubert_soft.py  svc_content_vec.py  svc_content_vec_finetune.py  svc_content_vec_multi_node.py  svc_hifisinger.py  svc_hifisinger_finetune.py  svc_hifisinger_v2.py  svc_hubert_soft.py  svc_hubert_soft.yaml  svc_hubert_soft_cofig.yaml  svc_hubert_soft_continuous_pitch.py  svc_hubert_soft_diff_svc.py  svc_hubert_soft_multi_speakers.py  svc_hubert_soft_multispk.yaml  svc_vec_muti_node.py  svcc2023_hifisinger_finetune.py  svs_baseline.py  svs_diff_singer.py  svs_diff_singer_no_fs2.py  test.yaml  test2.yaml  test2_bak.yaml  tts_baseline.py  tts_diff_base.py  tts_diff_multi_speakers.py  vocoder_auto_vocoder.py  vocoder_hifigan.py  vocoder_nsf_hifigan.py  vocoder_refinegan.py
configs/dataloader/: base.yaml
configs/dataset/: audio_folder.yaml  hifi_svc.yaml  naive_svc.yaml
configs/diff-svc/: base.py
configs/model/: diff_svc_v2.yaml  hifi_svc.yaml  hifi_svc_v2.yaml
configs/optimizer/: exponential.yaml  step.yaml  warmup_cosine.yaml
configs/preprocessing/: diff_svc_v2.yaml  hifi_svc.yaml
configs/scheduler/: exponential.yaml  step.yaml  warmup_cosine.yaml  warmup_cosine_finetune.yaml
configs/trainer/: base.yaml  hifi_svc.yaml
dataset/: speakers.json  stats.json
dictionaries/: japanese-mfa.txt  opencpop-extension.txt  opencpop-strict.txt  opencpop.txt
dictionaries/ipa/: sequence_phonemes.py  symbols.yaml
diff_svc/archs/: diffsinger.py
diff_svc/datasets/: __init__.py  audio_folder.py  simple_dataset.py
diff_svc/denoisers/: __init__.py  builder.py  wavenet.py
diff_svc/diffusions/: __init__.py  blocks.py  builder.py  diffusion.py  modules.py
diff_svc/encoders/: __init__.py  builder.py  fast_speech.py
diff_svc/feature_extractors/: base.py  chinese_hubert.py  chinese_hubert_fairseq.py  wav2vec2_xlsr.py
diff_svc/modules/: positional_embedding.py
diff_svc/schedulers/: cosine_scheduler.py  lambda_warmup_cosine_scheduler.py  warmup_cosine_scheduler.py
diff_svc/utils/: stft.py
docs/: conf.py  index.md  requirements.txt
docs/pages/: config.md  guide.md
filelists/: test.txt  train.txt  val.txt
fish_diffusion/archs/: diffsinger.py
fish_diffusion/datasets/: __init__.py  audio_folder.py  builder.py  concat.py  hifisinger.py  naive.py  repeat.py  sample.py  utils.py  vocoder.py
fish_diffusion/denoisers/: __init__.py  attention.py  builder.py  wavenet.py
fish_diffusion/diffusions/: builder.py  diffusion.py  noise_predictor.py
fish_diffusion/encoders/: __init__.py  attention.py  builder.py  fast_speech.py  identity.py  naive_projection.py
fish_diffusion/feature_extractors/: __init__.py  base.py  builder.py  hubert_soft.py  (+4 more)
hifigan/: __init__.py
hubert/: hubert_model.py
model/: __init__.py  attentions.py  blocks.py  diffsinger.py  diffusion.py  loss.py  modules.py  optimizer.py
notebooks/: fish-audio_sample.ipynb  train.ipynb
pages/: config.html  faq.html  guide.html  quality.html
preprocessor/: preprocessor.py
test/: test2.yaml
tests/: test_auto_vocoder.py  test_crepe_optimization.py  test_nsf_hifigan.py  test_refinegan.py  test_visualize_pitch.py
text/: __init__.py
tools/: batch_inference.py  build_faiss.py  clean_whisper_checkpoint.py  diff_svc_converter.py  download_nsf_hifigan.py  flask_api.bat  flask_api.py  generate_requirements.sh  get_mms.py  inference.py  lint.sh  pitches_editor.py  speaker_verification.py  train.py  vst_flask_api.py
utils/: __init__.py  model.py  pitch_tools.py  tools.py
vanilla_hifigan/: config.json  generator_v1.txt  models.py
(+215 files in other folders)
