[project]
name = "fish-diffusion"
version = "2.2.0"
description = "An easy to understand TTS / SVS / SVC framework"
license = {file = "LICENSE"}
authors = [
    {name = "Lengyue", email = "lengyue@lengyue.me"},
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "praat-parselmouth<1.0.0,>=0.4.3",
    "soundfile<1.0.0,>=0.11.0",
    "librosa<1.0.0,>=0.9.1",
    "numba<1.0.0,>=0.56.4",
    "fish-audio-preprocess==0.2.3",
    "wandb<1.0.0,>=0.13.9",
    "transformers>=4.33.3",
    "torchcrepe>=0.0.19",
    "mmengine==0.7.3",
    "loguru<1.0.0,>=0.6.0",
    "click<9.0.0,>=8.1.3",
    "tensorboard<3.0.0,>=2.11.2",
    "openai-whisper<20230125,>=20230124",
    "pypinyin<1.0.0,>=0.48.0",
    "TextGrid<2.0,>=1.5",
    "pyworld>=0.3.4",
    "pykakasi<3.0.0,>=2.2.1",
    "gradio<4.0.0,>=3.24.1",
    "onnxruntime<2.0.0,>=1.14.0",
    "flask<3.0.0,>=2.2.3",
    "flask-cors<4.0.0,>=3.0.10",
    "natsort<9.0.0,>=8.3.1",
    "torch<3.0.0,>=2.0.0",
    "torchvision<1.0.0,>=0.15.1",
    "torchaudio<3.0.0,>=2.0.0",
    "pytorch-lightning<3.0.0,>=2.0.2",
    "fastapi==0.88.0",
    "pre-commit>=3.3.3",
    "onnx>=1.14.0",
    "loralib>=0.1.1",
    "diffusers>=0.21.2",
    "deepspeed>=0.10.3",
    "sentencepiece>=0.1.99",
    "datasets>=2.14.5",
    "accelerate>=0.23.0",
]

[tool.pdm]
[tool.pdm.build]
includes = ["fish_diffusion"]

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
    "black>=22.12.0",
    "pytest>=7.3.1",
    "ipdb>=0.13.13",
]
docs = [
    "furo>=2023.3.27",
    "sphinx-autobuild>=2021.3.14",
    "myst-parser>=0.18.1",
    "sphinx>=5.3.0",
]

[[tool.pdm.autoexport]]
filename = "requirements.txt"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
lint = { shell = "black . && isort ." }
test = { shell = "PYTHONPATH=. pytest -n=auto -q tests" }
docs = { shell = "sphinx-autobuild docs docs/_build/html" }

[[tool.pdm.source]]
type = "find_links"
name = "torch-cu118"
url = "https://download.pytorch.org/whl/cu118"
verify_ssl = true

[tool.isort]
profile = "black"
extend_skip = ["dataset", "logs"]
